# A-Star-Search

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.out  test.cpp  test.out
headers/: AStar.hpp  Board.hpp  Problem.hpp  Tree.hpp
src/: AStar.cpp  Board.cpp  Problem.cpp  Tree.cpp
test/: oldmain.cpp
